--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                             Build syllabus for CSB course
                         </li>
                         <li>
-                            Programming a web store
+                            <a>Programming a web store</a>
+                            <a>Link: https://github.com/jackorofrobert/Project</a>
                         </li>
                         <li>
                             Do 10 python tasks
