--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">TOP</button>
     <section id="overlay"></section>
     <header>
         <div class="container">
@@ -93,8 +94,7 @@
                             Build syllabus for CSB course
                         </li>
                         <li>
-                            <a>Programming a web store</a>
-                            <a>Link: https://github.com/jackorofrobert/Project</a>
+                            Programming a web store
                         </li>
                         <li>
                             Do 10 python tasks
@@ -104,6 +104,77 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section id="works">
+        <div class="container">
+            <h2>Project</h2>
+            <div class="works__img">
+                <div class="works__img--single">
+                    <a href="https://github.com/jackorofrobert/Project"><img src="img\work-1.png" alt="web store"></a>
+                </div>
+                <div class="works__img--single">
+                    <a href="https://github.com/jackorofrobert/petstore"><img src="./img/work-2.png"
+                            alt="pet store"></a>
+                </div>
+            </div>
+            <div class="works__btn">
+                <a href="#"><button>View More</button></a>
+            </div>
+        </div>
+    </section>
+
+    <br><br><br><br>
+
+    <section class="my-skill" id="skill">
+
+        <div class="title">
+            <p>SKILLS</p>
+            <div class="red-line"></div>
+        </div>
+
+        <p class="text">There is always space for improvement, no matter how long I've been in the business.</p>
+
+        <div class="skills">
+
+            <div class="skill">
+                <div class="skill-name">HTML</div>
+                <div class="skill-bar">
+                    <div class="skill-per" per="80%" style="max-width:80%"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="skill-name">JS</div>
+                <div class="skill-bar">
+                    <div class="skill-per" per="50%" style="max-width:50%"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="skill-name">CSS</div>
+                <div class="skill-bar">
+                    <div class="skill-per" per="40%" style="max-width:40%"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="skill-name">Python</div>
+                <div class="skill-bar">
+                    <div class="skill-per" per="75%" style="max-width:75%"></div>
+                </div>
+            </div>
+
+            <div class="skill">
+                <div class="skill-name">Research</div>
+                <div class="skill-bar">
+                    <div class="skill-per" per="80%" style="max-width:80%"></div>
+                </div>
+            </div>
+
+        </div>
+
+        <br><br><br><br><br>
+
     </section>
     <footer id="footer">
         <div class="container">
@@ -129,9 +200,25 @@
                 </div>
             </div>
         </div>
+        <!-- <table id="footer" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="black">
+            <tr>
+                <td>
+                    <table border="0" cellpadding="15" cellspacing="0" width="90%" align="center">
+                        <tr>
+                            <td width="80%" valign="top">
+                                <font face="Verdana" color="#4CAF50" size="5">
+                                    ©Copyright 2050 by nobody.
+                                    All rights reserved.
+                                </font>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table> -->
     </footer>
     <script src="https://kit.fontawesome.com/28c0af3030.js" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
