--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="banner__heading">
                 <h1>Hello, I'm Sơn</h1>
                 <p>
-                    This web is my Portfolio. It will show you about my infomation and what project did I do
+                    This is my Portfolio. It shows you about my infomation and what project did I do
                 </p>
                 <a href="#"><button class="banner__btn">View More</button></a>
                 <div class="banner__socials">
@@ -97,7 +97,7 @@
                             Programming a web store
                         </li>
                         <li>
-                            Do 10 python tasks
+                            Edit syllabus video for JSB course
                         </li>
                     </ul>
                     </p>
