--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
             <h2>Project</h2>
             <div class="works__img">
                 <div class="works__img--single">
-                    <a href="https://github.com/jackorofrobert/Project"><img src="img\work-1.png" alt="web store"></a>
+                    <a href="https://mindx-store.netlify.app"><img src="img\work-1.png" alt="web store"></a>
                 </div>
                 <div class="works__img--single">
-                    <a href="https://github.com/jackorofrobert/petstore"><img src="./img/work-2.png"
+                    <a href="https://pet-information.netlify.app"><img src="./img/work-2.png"
                             alt="pet store"></a>
                 </div>
             </div>
